<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">SimpleTwitterClient</string>

	<string name="connected_user_avatar_description">User avatar image</string>
	<string name="default_user_name">UserName will be here</string>
	<string name="default_user_description">Short user description will be here</string>

	<string name="text_enter_code_here">Enter code here:</string>
	<string name="text_wait">Wait…</string>
	<string name="text_user_name">Person name</string>
	<string name="text_user_screen_name">\@Person screen name</string>
	<string name="text_date">Date</string>
	<string name="text">Some text</string>
	<string name="text_from">From:</string>
	<string name="text_follow">Follow</string>
	<string name="text_unfollow">Unfollow</string>
	<string name="text_post_tweet">Post tweet</string>
	<string name="text_write_tweet">Write tweet</string>
	<string name="text_authorization">Twitter authorization</string>
	<string name="text_able"><b>This application will be able to:</b></string>
	<string name="text_not_able"><b>This application will not be able to:</b></string>
	<string name="text_able_description">Read Tweets from your timeline.\nSee who you follow, and follow new people.\nUpdate your profile.\nPost Tweets for you.\nAccess your direct messages.</string>
	<string name="text_not_able_description">See your Twitter password.</string>
	<string name="text_send_message">Send message…</string>
	<string name="text_reply_to">Reply to…</string>
	<string name="text_user_info">Info…</string>
	<string name="text_settings">Settings…</string>
	<string name="text_search">Search</string>
	<string name="text_about">About</string>
	<string name="text_retweet">Retweet</string>
	<string name="text_show_tweets">Tweets</string>
	<string name="text_remove_tweet">Remove tweet</string>
	<string name="text_information">User info</string>
	<string name="text_content_description">User avatar image</string>
	<string name="text_retweeted_by">Retweeted by:</string>

	<string name="pref_image_loading">Allow loading images</string>
	<string name="pref_image_loading_summary">Loading images like user avatars automatically</string>
	<string name="pref_tweet_potion">Loading tweets count</string>
	<string name="pref_tweet_potion_summary">Number of tweets for loading for one time</string>
	<string name="pref_title">Loading settings</string>

	<string name="dialog_tweet_length">Tweet length:</string>

	<string name="search_hint">Search something</string>

	<string name="menuitem_friends">I follow</string>
	<string name="menuitem_home_timeline">Home</string>
	<string name="menuitem_my_tweets">My tweets</string>
	<string name="menuitem_my_followers">My followers</string>
	<string name="menuitem_messages">Messaging</string>

	<string name="btn_ok">OK</string>
	<string name="btn_cancel">Cancel</string>
	<string name="btn_show_image">Image</string>
	<string name="btn_agree">Agree</string>
	<string name="btn_reply">Reply</string>
	<string name="btn_retweet">Retweet</string>
	<string name="btn_send">Send</string>
	<string name="btn_delete">Remove</string>

	<string name="title_dialog_send_message">Message to</string>
	<string name="title_dialog_reply_to">Reply to</string>
	<string name="title_dialog_remove_tweet">Tweet removing</string>

	<string name="toast_reply_error">Can\'t send reply. Check connection and try again later</string>
	<string name="toast_post_tweet_error">Can\'t post tweet. Check connection and try again later</string>
	<string name="toast_delete_tweet_error">Can\'t remove tweet. Check connection and try again later</string>
	<string name="toast_retweet_error">Can\'t retweet tweet. Check connection and try again later</string>

	<string-array name="prefs_tweets_values">
		<item>10 tweets</item>
		<item>25 tweets</item>
		<item>50 tweets</item>
		<item>75 tweets</item>
		<item>100 tweets</item>
	</string-array>

</resources>
