<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<group android:id="@+id/group_menu_followings">
		<item
				android:id="@+id/menu_item_send_message"
				android:title="@string/text_send_message"
				android:showAsAction="always"
				android:icon="@drawable/ic_action_edit"/>
		<item
				android:id="@+id/menu_item_show_timeline"
				android:title="@string/text_show_tweets"
				android:showAsAction="always"
				android:icon="@drawable/red_square"/>
		<item
				android:id="@+id/menu_item_unfollow"
				android:title="@string/text_unfollow"
				android:showAsAction="always"
				android:icon="@drawable/ic_action_remove_person"/>

		<item
				android:id="@+id/menu_settings"
				android:title="@string/text_settings"
				android:showAsAction="never"/>

	</group>
</menu>
