<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

	<TextView
			android:id="@+id/auth_textview"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:text="@string/text_authorization"
			android:layout_marginTop="35dp"
			android:layout_marginBottom="35dp"
			android:layout_centerHorizontal="true"/>

	<TextView
			android:id="@+id/enter_code_textview"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:text="@string/text_enter_code_here"
			android:layout_marginBottom="25dp"
			android:layout_marginLeft="25dp"
			android:layout_marginRight="5dp"
			android:layout_below="@id/auth_textview"/>

	<EditText
			android:id="@+id/enter_code_editText"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:inputType="number"
			android:layout_alignBottom="@+id/enter_code_textview"
			android:layout_toRightOf="@+id/enter_code_textview"
			android:layout_marginRight="25dp"/>


	<TextView
			android:id="@+id/textView"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:text="@string/text_able"
			android:layout_below="@+id/enter_code_textview"
			android:layout_alignLeft="@+id/enter_code_textview"/>

	<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceSmall"
			android:text="@string/text_able_description"
			android:id="@+id/textView2"
			android:layout_below="@+id/textView"
			android:layout_alignLeft="@+id/textView"
			android:layout_marginTop="10dp"/>

	<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:text="@string/text_not_able"
			android:id="@+id/textView3"
			android:layout_below="@id/textView2"
			android:layout_alignLeft="@+id/textView2"
			android:layout_marginTop="10dp"/>

	<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceSmall"
			android:text="@string/text_not_able_description"
			android:id="@+id/textView4"
			android:layout_below="@+id/textView3"
			android:layout_alignLeft="@+id/textView3"
			android:layout_marginTop="10dp"/>

	<Button
			android:id="@+id/button_code_entered"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/btn_agree"
			android:layout_gravity="center_horizontal"
			android:onClick="buttonClickHandler"
			android:layout_below="@+id/textView4"
			android:layout_centerHorizontal="true"
			android:layout_marginTop="40dp"
			android:background="@drawable/button_background_set"/>

</RelativeLayout>
