<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

	<ImageView
			android:layout_width="50dp"
			android:layout_height="50dp"
			android:id="@+id/user_avatar_imageview"
			android:layout_alignParentLeft="true"
			android:layout_margin="10dp"
			android:saveEnabled="true"
			android:contentDescription="Personal Avatar"/>

	<ImageView
			android:layout_width="58dp"
			android:layout_height="58dp"
			android:layout_alignParentLeft="true"
			android:layout_margin="6dp"
			android:src="@drawable/shape_for_imageview"/>

	<TextView
			android:id="@+id/username_textview"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceSmall"
			android:text="@string/text_user_name"
			android:layout_marginTop="10dp"
			android:layout_toRightOf="@+id/user_avatar_imageview"/>

	<TextView
			android:id="@+id/user_screen_name_textview"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceSmall"
			android:textSize="12sp"
			android:textColor="@color/screen_name_color"
			android:text="@string/text_user_screen_name"
			android:layout_below="@+id/username_textview"
			android:layout_toRightOf="@+id/user_avatar_imageview"/>

	<TextView
			android:id="@+id/tweet_text_textview"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceSmall"
			android:textColor="@color/tweet_text_color"
			android:text="@string/text"
			android:autoLink="web"
			android:layout_marginTop="5dp"
			android:layout_marginRight="5dp"
			android:layout_below="@+id/user_screen_name_textview"
			android:layout_toRightOf="@+id/user_avatar_imageview"
			android:background="@drawable/background_single_tweet"/>

	<LinearLayout
			android:orientation="horizontal"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:id="@+id/linearLayout"
			android:layout_below="@+id/tweet_text_textview"
			android:layout_marginTop="25dp">

		<Button
				style="?android:attr/borderlessButtonStyle"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="0.5"
				android:text="@string/btn_cancel"
				android:textSize="16sp"
				android:id="@+id/button_cancel"/>

		<Button
				style="?android:attr/borderlessButtonStyle"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="0.5"
				android:text="@string/btn_retweet"
				android:textSize="16sp"
				android:id="@+id/button_retweet"/>
	</LinearLayout>
</RelativeLayout>
