<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="match_parent"
		android:layout_height="match_parent">

	<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/dialog_tweet_length"
			android:textSize="16sp"
			android:id="@+id/dialog_tweet_length"
			android:layout_marginLeft="20dp"
			android:layout_marginTop="50dp"
			android:labelFor="@+id/dialog_tweet_text"/>

	<EditText
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginLeft="20dp"
			android:layout_marginRight="20dp"
			android:layout_marginTop="50dp"
			android:inputType="textMultiLine"
			android:ems="10"
			android:id="@+id/dialog_tweet_text"
			android:background="@drawable/background_single_tweet"
			android:padding="5dp"
			android:textColor="@color/tweet_text_color"
			android:layout_below="@+id/dialog_tweet_length"/>

	<LinearLayout
			android:orientation="horizontal"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:id="@+id/linearLayout"
			android:layout_below="@+id/dialog_tweet_text"
			android:layout_marginTop="100dp">

		<Button
				style="?android:attr/borderlessButtonStyle"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="0.5"
				android:text="@string/btn_cancel"
				android:textSize="16sp"
				android:id="@+id/button_cancel"/>

		<Button
				style="?android:attr/borderlessButtonStyle"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="0.5"
				android:text="@string/text_post_tweet"
				android:textSize="16sp"
				android:id="@+id/button_post_tweet"/>
	</LinearLayout>
</RelativeLayout>
